--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.7"
   }
 }
